--- a/charts/stable/mc-router/Chart.yaml
+++ b/charts/stable/mc-router/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: Lightweight multiplexer/proxy for Minecraft-Java servers.
 home: https://truecharts.org/charts/stable/mc-router
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/mc-router.webp
@@ -33,4 +33,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/mc-router
   - https://hub.docker.com/r/itzg/mc-router
 type: application
-version: 6.5.1
+version: 6.5.2
