chore(minecraft-bungeecord) deprecate chart

--- a/charts/stable/minecraft-bungeecord/Chart.yaml
+++ b/charts/stable/minecraft-bungeecord/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: the front-end of a cluster of minecraft-java containers.
 home: https://truecharts.org/charts/stable/minecraft-bungeecord
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-bungeecord.webp
@@ -34,4 +34,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/minecraft-bungeecord
   - https://hub.docker.com/r/itzg/bungeecord
 type: application
-version: 10.2.1
+version: 10.2.2
