feat(minecraft-router) add minecraft-router (#28554)
**Description**

add new chart (rename of old chart)

⚒️ Fixes  # <!--(issue)-->

**⚙️ Type of change**

- [X] ⚙️ Feature/App addition
- [ ] 🪛 Bugfix
- [ ] ⚠️ Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] 🔃 Refactor of current code

**🧪 How Has This Been Tested?**
<!--
Please describe the tests that you ran to verify your changes. Provide
instructions so we can reproduce. Please also list any relevant details
for your test configuration
-->

**📃 Notes:**
<!-- Please enter any other relevant information here -->

**✔️ Checklist:**

- [X] ⚖️ My code follows the style guidelines of this project
- [X] 👀 I have performed a self-review of my own code
- [ ] #️⃣ I have commented my code, particularly in hard-to-understand
areas
- [ ] 📄 I have made corresponding changes to the documentation
- [ ] ⚠️ My changes generate no new warnings
- [ ] 🧪 I have added tests to this description that prove my fix is
effective or that my feature works
- [ ] ⬆️ I increased versions for any altered app according to semantic
versioning
- [ ] I made sure the title starts with `feat(chart-name):`,
`fix(chart-name):` or `chore(chart-name):`

**➕ App addition**

If this PR is an app addition please make sure you have done the
following.

- [ ] 🖼️ I have added an icon in the Chart's root directory called
`icon.png`

---

_Please don't blindly check all the boxes. Read them and only check
those that apply.
Those checkboxes are there for the reviewer to see what is this all
about and
the status of this PR with a quick glance._

--- a/charts/incubator/minecraft-router/Chart.yaml
+++ b/charts/incubator/minecraft-router/Chart.yaml
@@ -15,11 +15,12 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: true
+deprecated: false
 description: Lightweight multiplexer/proxy for Minecraft-Java servers.
-home: https://truecharts.org/charts/stable/mc-router
-icon: https://truecharts.org/img/hotlink-ok/chart-icons/mc-router.webp
+home: https://truecharts.org/charts/stable/minecraft-router
+icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-router.webp
 keywords:
+  - minecraft-router
   - mc-router
   - minecraft
 kubeVersion: '>=1.24.0-0'
@@ -27,10 +28,10 @@ maintainers:
   - name: TrueCharts
     email: info@truecharts.org
     url: https://truecharts.org
-name: mc-router
+name: minecraft-router
 sources:
   - https://github.com/itzg/mc-router
-  - https://github.com/truecharts/charts/tree/master/charts/stable/mc-router
+  - https://github.com/truecharts/charts/tree/master/charts/stable/minecraft-router
   - https://hub.docker.com/r/itzg/mc-router
 type: application
-version: 6.5.3
+version: 0.0.1
