--- a/charts/incubator/minecraft-gate/Chart.yaml
+++ b/charts/incubator/minecraft-gate/Chart.yaml
@@ -4,7 +4,7 @@ annotations:
   truecharts.org/min_helm_version: "3.11"
   truecharts.org/train: incubator
 apiVersion: v2
-appVersion: 1.32.2
+appVersion: latest
 dependencies:
   - name: common
     version: 25.1.5
@@ -14,7 +14,7 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: High-performance, resource-efficient Minecraft reverse proxy with robust multi-protocol version support.
+description: High-performance, resource-efficient Minecraft reverse proxy with robust multi-protocol version support.I
 home: https://truecharts.org/charts/incubator/minecraft-gate
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-gate.webp
 keywords:
