--- a/charts/incubator/minecraft-gate/Chart.yaml
+++ b/charts/incubator/minecraft-gate/Chart.yaml
@@ -1,5 +1,5 @@
 annotations:
-  truecharts.org/category: security
+  truecharts.org/category: games
   truecharts.org/max_helm_version: "3.15"
   truecharts.org/min_helm_version: "3.11"
   truecharts.org/train: incubator
@@ -14,11 +14,12 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: High-performance, resource-efficient Minecraft reverse proxy with robust multi-protocol version support.I
+description: High-performance, resource-efficient Minecraft reverse proxy with robust multi-protocol version support.
 home: https://truecharts.org/charts/incubator/minecraft-gate
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-gate.webp
 keywords:
   - minecraft-gate
+  - minecraft
   - proxy
 kubeVersion: '>=1.24.0-0'
 maintainers:
