--- a/charts/incubator/minecraft-gate/Chart.yaml
+++ b/charts/incubator/minecraft-gate/Chart.yaml
@@ -14,7 +14,7 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: High-performance, resource-efficient Minecraft reverse proxy with robust multi-protocol version support.
+description: An extensible, high performant & paralleled Minecraft proxy server
 home: https://truecharts.org/charts/incubator/minecraft-gate
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/minecraft-gate.webp
 keywords:
