--- a/charts/incubator/minecraft-gate/templates/common.yaml
+++ b/charts/incubator/minecraft-gate/templates/common.yaml
@@ -1,2 +1,5 @@
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.v1.common.loader.init" . }}
 
-{{ include "tc.v1.common.loader.all" . }}
+{{/* Render the templates */}}
+{{ include "tc.v1.common.loader.apply" . }}
