fix(sonarr) update sonarr env variables to the official variables

--- a/charts/stable/sonarr/values.yaml
+++ b/charts/stable/sonarr/values.yaml
@@ -37,8 +37,13 @@ workload:
               type: http
               path: /ping
           env:
-            SONARR__PORT: "{{ .Values.service.main.ports.main.port }}"
-            SONARR__AUTHENTICATION_METHOD: ""
+            SONARR__SERVER__PORT: "{{ .Values.service.main.ports.main.port }}"
+            SONARR__AUTH__METHOD: "" # External | Basic | Forms
+            SONARR__AUTH__REQUIRED: DisabledForLocalAddresses # DisabledForLocalAddresses | Enabled
+            # SONARR__APP__THEME: dark     
+            # SONARR__APP__INSTANCENAME: Sonarr
+            # SONARR__LOG__LEVEL: info
+            # SONARR__UPDATE__BRANCH: develop
         exportarr:
           enabled: "{{ .Values.metrics.main.enabled }}"
           imageSelector: exportarrImage
@@ -92,4 +97,3 @@ metrics:
 portal:
   open:
     enabled: true
-updated: true
