--- a/charts/stable/sonarr/values.yaml
+++ b/charts/stable/sonarr/values.yaml
@@ -38,8 +38,10 @@ workload:
               path: /ping
           env:
             SONARR__SERVER__PORT: "{{ .Values.service.main.ports.main.port }}"
-            SONARR__AUTH__METHOD: "" # External | Basic | Forms
-            SONARR__AUTH__REQUIRED: DisabledForLocalAddresses # DisabledForLocalAddresses | Enabled
+             # External | Basic | Forms
+            SONARR__AUTH__METHOD: ""
+            # DisabledForLocalAddresses | Enabled
+            SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
             # SONARR__APP__THEME: dark     
             # SONARR__APP__INSTANCENAME: Sonarr
             # SONARR__LOG__LEVEL: info
