--- a/charts/stable/prowlarr/values.yaml
+++ b/charts/stable/prowlarr/values.yaml
@@ -34,8 +34,15 @@ workload:
             startup:
               type: tcp
           env:
-            PROWLARR__PORT: "{{ .Values.service.main.ports.main.port }}"
-            PROWLARR__AUTHENTICATION_METHOD: ""
+            PROWLARR__SERVER__PORT: "{{ .Values.service.main.ports.main.port }}"
+             # External | Basic | Forms
+            PROWLARR__AUTH__METHOD: ""
+            # DisabledForLocalAddresses | Enabled
+            PROWLARR__AUTH__REQUIRED: DisabledForLocalAddresses
+            # PROWLARR__APP__THEME: dark     
+            # PROWLARR__APP__INSTANCENAME: Prowlarr
+            # PROWLARR__LOG__LEVEL: info
+            # PROWLARR__UPDATE__BRANCH: develop
         exportarr:
           enabled: "{{ .Values.metrics.main.enabled }}"
           imageSelector: exportarrImage
@@ -101,4 +108,3 @@ metrics:
 portal:
   open:
     enabled: true
-updated: true
