--- a/charts/stable/lidarr/values.yaml
+++ b/charts/stable/lidarr/values.yaml
@@ -40,8 +40,15 @@ workload:
               type: http
               path: /ping
           env:
-            LIDARR__PORT: "{{ .Values.service.main.ports.main.port }}"
-            LIDARR__AUTHENTICATION_METHOD: ""
+            LIDARR__SERVER__PORT: "{{ .Values.service.main.ports.main.port }}"
+             # External | Basic | Forms
+            LIDARR__AUTH__METHOD: ""
+            # DisabledForLocalAddresses | Enabled
+            LIDARR__AUTH__REQUIRED: DisabledForLocalAddresses
+            # LIDARR__APP__THEME: dark     
+            # LIDARR__APP__INSTANCENAME: Lidarr
+            # LIDARR__LOG__LEVEL: info
+            # LIDARR__UPDATE__BRANCH: develop
         exportarr:
           enabled: "{{ .Values.metrics.main.enabled }}"
           imageSelector: exportarrImage
