--- a/.github/workflows/clustertool.release.yaml
+++ b/.github/workflows/clustertool.release.yaml
@@ -11,13 +11,19 @@ jobs:
   goreleaser:
     runs-on: actions-runners
     steps:
+
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5
         with:
           go-version: stable
-          cache: true
-          cache-dependency-path: |
-            **/go.mod
-            **/go.sum
+      - name: Setup Golang caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-golang-
       # - name: Install Syft
       #   run: sudo curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
