fix(clustertool): ensure CI pipelines work

--- a/clustertool/embed/generic/root/DOTREPLACEgithub/workflows/automerge.yaml
+++ b/clustertool/embed/generic/root/DOTREPLACEgithub/workflows/automerge.yaml
@@ -2,8 +2,7 @@ name: Automerge and Approve
 
 on:
   workflow_run:
-    # If you want to filter based on a specific finisher workflow, add here
-    # workflows: ["Pull Request: Validate"]  # Name of the main CI workflow
+    workflows: ["Placeholder"]  # Name of the main CI workflow
     types:
       - completed
 
