--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -26,3 +26,5 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.BOT_TOKEN }}"
           UPDATE_RETRIES: 24
           UPDATE_RETRY_SLEEP: 60000
+          MERGE_METHOD: "squash"
+
