--- a/clusters/main/kubernetes/flux-entry.yaml
+++ b/clusters/main/kubernetes/flux-entry.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: six-shooter-flux-entry
+  name: truecharts-flux-entry
   namespace: flux-system
 spec:
   interval: 10m
@@ -11,7 +11,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: six-shooter
+    name: truecharts
   decryption:
     provider: sops
     secretRef:
