--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,10 @@
 # Default code owners
-*                       @truecharts/core-team @privatepuffin @alfi0812 @kqmaverick @Heavybullets8 @bakayukii
+*                       @truecharts/core-team @privatepuffin @alfi0812 @kqmaverick @Heavybullets8
 /charts/dev/            @privatepuffin
 /charts/unstable/       @privatepuffin
+/charts/common/         @privatepuffin @stavros-k
+/clustertool/           @privatepuffin @stavros-k
+/website/               @privatepuffin @alfi0812 @kqmaverick
 /.github/CODEOWNERS     @privatepuffin @stavros-k
 /.github/scripts/       @privatepuffin @stavros-k
 /.github/workflows/     @privatepuffin @stavros-k
