--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,7 @@
 /charts/common/         @privatepuffin @stavros-k
 /clustertool/           @privatepuffin @stavros-k
 /website/               @privatepuffin @alfi0812 @kqmaverick
-/.github/CODEOWNERS     @privatepuffin @stavros-k
-/.github/scripts/       @privatepuffin @stavros-k
-/.github/workflows/     @privatepuffin @stavros-k
-/.github/renovate.json5 @privatepuffin @stavros-k
+/.github/               @privatepuffin @stavros-k
+/.github/README.md      @privatepuffin @alfi0812
+/clusters/              @privatepuffin
+/repositories/          @privatepuffin
