--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,3 +9,4 @@
 /.github/README.md      @privatepuffin @alfi0812
 /clusters/              @privatepuffin
 /repositories/          @privatepuffin
+**/docs/                @privatepuffin @alfi0812 @kqmaverick
