--- a/charts/stable/generic-device-plugin/values.yaml
+++ b/charts/stable/generic-device-plugin/values.yaml
@@ -12,7 +12,7 @@ workload:
         main:
           args:
             - --domain
-            - kernel.org
+            - truecharts.org
             - --device
             - |
               name: tun
