--- a/clustertool/embed/generic/root/DOTREPLACEdevcontainer/devcontainer.json
+++ b/clustertool/embed/generic/root/DOTREPLACEdevcontainer/devcontainer.json
@@ -8,5 +8,7 @@
     },
     "postStartCommand": {
       "git": "git config --global --add safe.directory ${containerWorkspaceFolder}"
-    }
+    },
+    "updateRemoteUserUID": false,
+    "runArgs": ["--privileged"]
   }
