delete stuff correctly

--- a/containers/apps/devcontainer/Dockerfile
+++ b/containers/apps/devcontainer/Dockerfile
@@ -23,7 +23,7 @@ RUN curl -L "https://github.com/truecharts/public/releases/download/v${VERSION}/
 RUN curl -fsSLO "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew-linux_amd64.tar.gz" \
     && tar zxvf "krew-linux_amd64.tar.gz" \
     && ./"krew-linux_amd64" install krew \
-    && rm /tmp/clustertool.tar.gz
+    && rm ./krew-linux_amd64.tar.gz
 
 ENV PATH="${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
 
