--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,14 @@
 {
     "recommendations": [
-        "redhat.vscode-yaml",
-        "mrmlnc.vscode-duplicate",
-        "mhutchie.git-graph",
-        "eamodio.gitlens",
-        "yzhang.markdown-all-in-one",
-        "searKing.preview-vscode",
-        "DavidAnson.vscode-markdownlint",
-        "IgorSbitnev.error-gutters",
+        "albert.TabOut",
+        "mikestead.dotenv",
+        "mitchdenny.ecdc",
+        "signageos.signageos-vscode-sops",
+        "EditorConfig.editorconfig",
+        "PKief.material-icon-theme",
         "usernamehw.errorlens",
+        "redhat.vscode-yaml",
+        "weaveworks.vscode-gitops-tools",
         "Tim-Koehler.helm-intellisense",
         "ms-kubernetes-tools.vscode-kubernetes-tools",
         "sandipchitale.vscode-kubernetes-helm-extras",
