--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,12 +1,13 @@
 # Default code owners
 *                       @truecharts/core-team @privatepuffin @alfi0812 @kqmaverick @Heavybullets8
+/charts/                @privatepuffin @alfi0812 @kqmaverick @Heavybullets8 @StevenMcElligott
 /charts/dev/            @privatepuffin
 /charts/unstable/       @privatepuffin
 /charts/common/         @privatepuffin @stavros-k
 /clustertool/           @privatepuffin @stavros-k
-/website/               @privatepuffin @alfi0812 @kqmaverick
+/website/               @privatepuffin @alfi0812 @kqmaverick @StevenMcElligott
 /.github/               @privatepuffin @stavros-k
-/.github/README.md      @privatepuffin @alfi0812
+/.github/README.md      @privatepuffin @alfi0812 @StevenMcElligott
 /clusters/              @privatepuffin
 /repositories/          @privatepuffin
-**/docs/                @privatepuffin @alfi0812 @kqmaverick
+**/docs/                @privatepuffin @alfi0812 @kqmaverick  @StevenMcElligott
