--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
     "postStartCommand": {
       "git": "git config --global --add safe.directory ${containerWorkspaceFolder}"
     },
+    "postAttachCommand": "fish",
     "updateRemoteUserUID": false,
     "runArgs": ["--privileged"]
   }
