--- a/charts/stable/rustdesk/Chart.yaml
+++ b/charts/stable/rustdesk/Chart.yaml
@@ -2,7 +2,7 @@ annotations:
   truecharts.org/category: security
   truecharts.org/max_helm_version: "3.15"
   truecharts.org/min_helm_version: "3.11"
-  truecharts.org/train: incubator
+  truecharts.org/train: stable
 apiVersion: v2
 appVersion: 1.32.2
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
     import-values: []
 deprecated: false
 description: rustdesk self-hosted
-home: https://truecharts.org/charts/incubator/rustdesk
+home: https://truecharts.org/charts/stable/rustdesk
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/rustdesk.webp
 keywords:
   - rustdesk
@@ -28,6 +28,6 @@ name: rustdesk
 sources:
   - https://rustdesk.com/de/
   - https://github.com/rustdesk/rustdesk-server
-  - https://github.com/truecharts/charts/tree/master/charts/incubator/rustdesk
+  - https://github.com/truecharts/charts/tree/master/charts/stable/rustdesk
 type: application
-version: 0.0.1
+version: 1.0.0
