Immich Add backup section for v1.120.0
Signed-off-by: yodatak <mryodatak@gmail.com>

--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -95,6 +95,15 @@ persistence:
         main: {}
       microservices:
         microservices: {}
+  backups:
+    enabled: true
+    mountPath: /usr/src/app/upload/backups
+    targetSelector:
+      # Main pod/container is server
+      main:
+        main: {}
+      microservices:
+        microservices: {}
   thumbs:
     enabled: true
     mountPath: /usr/src/app/upload/thumbs
